Resolve Collaborations section overflow bug

--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,11 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   /* scrollbar-gutter: stable; */
   scrollbar-width: thin;
@@ -23,5 +28,4 @@ html {
 body {
   /* Prevent navbar from overlapping content */
   margin-top: 4rem;
-  overflow-x: hidden;
 }
